--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/pedropmedina/aws-serverless-microservice-1/issues"
   },
-  "homepage": "https://github.com/pedropmedina/aws-serverless-microservice-1#readme"
+  "homepage": "https://github.com/pedropmedina/aws-serverless-microservice-1#readme",
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4"
+  },
+  "dependencies": {}
 }
